# eudaq-v2.6.0_src

main/lib/core/src/: DataCollector.cc
main/lib/python/src/: PybindDataCollector.cc  PybindMonitor.cc  test.py
user/fers/: CMakeLists.txt
user/fers/hardware/: CMakeLists.txt
user/fers/misc/: fers.conf  fers.ini  run.sh  setup_eudaq.sh
user/fers/module/src/: FERSDataCollector.cc  FERSProducer.cc  FERS_EUDAQ.cc  FERS_EUDAQ.cc_fra  FERS_EUDAQ.h
